# uebungen_prgt_1718

./: .gitignore  README.md
Folien/3-Datentypen/: BM_inttypes.txt  BM_move.txt
Folien/5-Klassen_Erweitert/: Benchmark.txt
uebung_1/: CMakeLists.txt
uebung_1/src/: CMakeLists.txt  main.cpp
uebung_2/include/: Paddle.h
uebung_2/src/: Ball.cpp  CMakeLists.txt  Paddle.cpp
uebung_3/: CMakeLists.txt
uebung_3/include/: Ball.h  Paddle.h
uebung_3/src/: CMakeLists.txt  main.cpp
uebung_4/: CMakeLists.txt
uebung_4/include/: Ball.h  EventTypes.h  Paddle.h
uebung_4/src/: CMakeLists.txt  IGameObject.cpp  Paddle.cpp  main.cpp
uebung_5/include/: Ball.h  Collision.h  EventTypes.h
uebung_5/src/: Ball.cpp  CMakeLists.txt  Collision.cpp  Observed.cpp  Paddle.cpp  main.cpp
uebung_6_loesung/cmake/: FindSFML.cmake
uebung_6_loesung/include/: Border.h
uebung_6_loesung/src/: Ball.cpp  Border.cpp  CMakeLists.txt  Collision.cpp  main.cpp
uebung_6_vorlage/: CMakeLists.txt
uebung_6_vorlage/include/: Ball.h  Border.h  Collision.h  EventTypes.h  Paddle.h
uebung_6_vorlage/src/: Ball.cpp  Border.cpp  Collision.cpp  Paddle.cpp  main.cpp
uebung_7_loesung/: CMakeLists.txt
uebung_7_loesung/include/: EventTypes.h  GUI.h  Observed.h  RNG.h
uebung_7_loesung/src/: Ball.cpp  CMakeLists.txt  RNG.cpp  main.cpp
uebung_7_vorlage/include/: Collision.h  GUI.h  IGameObject.h  IObserver.h  RNG.h
uebung_8/: CMakeLists.txt
uebung_8/src/: Ball.cpp  CMakeLists.txt  Collectable.cpp  CollectableManager.cpp  Collision.cpp  GUI.cpp  Paddle.cpp  RNG.cpp  main.cpp
(+12 files in other folders)
